@@ -7,7 +7,16 @@
 ?>
 
 <?php if ($error): ?>
-L'extension php_openssl n'est pas correctement lancée
+
+    <strong>
+        Extension <span style="font-family: courier">php_openssl</span> : absente
+    </strong><br />
+    Sans cette extension, vous ne pourrez pas envoyer d'e-mails en passant par
+    des connexions sécurisées.
+
 <?php else: ?>
-L'extension php_openssl est correctement lancée
+
+    L'extension <span style="font-family: courier">php_openssl</span> est
+    correctement lancée.
+
 <?php endif; ?>
